Splitting the SQL docs structure due to amount of content

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -25,12 +25,12 @@ SQL is straightforward to read but requires a bit of understanding to write. How
 
 There are four most important elements that you will be using in nearly every query in SFMC:
 
-* `SELECT`: tell the query what data you want to leverage
-* `FROM`: tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
+* [`SELECT`](sfmc-sql-select.mdx): tell the query what data you want to leverage
+* [`FROM`](sfmc-sql-from.mdx): tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
 * `JOIN`/`ON`: tell the query how you want to merge data from multiple sources
 * `WHERE`: tell the query which part of the above data is interesting to you
 
-To learn more about writing queries, check out deep-dive on [SQL Statements](sfmc-sql-statements.mdx) and [SFMC Data Views](sfmc-sql-system-data-views.mdx).
+However, there is much to learn to unlock full power of SQL in SFMC. Check out deep-dive docs on SQL Statements ([`SELECT`](sfmc-sql-select.mdx), [`FROM`](sfmc-sql-from.mdx))and [SFMC System Data Views](sfmc-sql-system-data-views.mdx).
 
 ## Query Studio
 
