--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -1,6 +1,7 @@
 ---
 id: docs-and-snippets
 title: Docs & Snippets
+slug: /
 description: SSJS + JS + SQL documentation and code snippets that I find useful for developing Marketing Automation
 ---
 
