--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -27,10 +27,10 @@ There are four most important elements that you will be using in nearly every qu
 
 * [`SELECT`](sfmc-sql-select.mdx): tell the query what data you want to leverage
 * [`FROM`](sfmc-sql-from.mdx): tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
-* `JOIN`/`ON`: tell the query how you want to merge data from multiple sources
-* `WHERE`: tell the query which part of the above data is interesting to you
+* [`JOIN`](sfmc-sql-join.mdx): tell the query how you want to merge data from multiple sources
+* [`WHERE`](sfmc-sql-where.mdx): tell the query which part of the above data is interesting to you
 
-However, there is much to learn to unlock full power of SQL in SFMC. Check out deep-dive docs on SQL Statements ([`SELECT`](sfmc-sql-select.mdx), [`FROM`](sfmc-sql-from.mdx))and [SFMC System Data Views](sfmc-sql-system-data-views.mdx).
+However, there is much to learn to unlock the full power of SQL in SFMC. Check out deep-dive docs on SQL Statements ([`SELECT`](sfmc-sql-select.mdx), [`FROM`](sfmc-sql-from.mdx)) and [SFMC System Data Views](sfmc-sql-system-data-views.mdx).
 
 ## Query Studio
 
