--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -1,19 +1,17 @@
 ---
 id: sfmc-sql-select
 title: SFMC SQL Select
-sidebar_label: SQL Select
-description: All you need to know about SQL to segment your contacts in SFMC
+sidebar_label: Select
+description: Selected information on the SELECT statement in SFMC SQL
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='All you need to know about SQL to segment your contacts in SFMC.' />
+<LeadText content='Selected information on the SELECT statement in SFMC SQL' />
 
-## Select
+The `SELECT` statement opens each query. It both defines the columns of data extensions and system data views that will be needed, as well as allows you to create entirely new data points.
 
-`SELECT` statement opens each query. It both defines the columns of data extensions and system data views that will be needed, as well as allows you to create completly new data points.
-
-The simplest version of this statement is `SELECT *`, which targets all available columns from the source. It is not recommended approach. Bad for both readability and performance of your query. This is why [Query Studio](sfmc-sql-basics.mdx#query-studio) does not support this shortcut.
+The simplest version of this statement is `SELECT *`, which targets all available columns from the source. I do not recommend this approach, as it is terrible for both readability and performance of your query. It is why [Query Studio](sfmc-sql-basics.mdx#query-studio) does not support this shortcut.
 
 The prefered method is targeting columns explicitly by their names:
 
@@ -32,9 +30,16 @@ SELECT
     [External Contact Id]
 ```
 
+There are also some exceptional cases related to selected [System Data Views](sfmc-sql-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example when taking Subscriber ID from Enterprise Attributes):
+
+```sql {2}
+SELECT
+    _SubscriberId
+```
+
 ### Labels
 
-You can also utilize `SELECT` as a tool to rename the source columns to match your needs in outcome data extension. It is especially useful, when you are pulling the data from Synchronized Data Extension with names coming from Salesforce custom fields.
+You can also utilize `SELECT` as a tool to rename the source columns to match your needs in an outcome data extension. It is especially useful when you are pulling the data from Synchronized Data Extension with names coming from Salesforce custom fields.
 
 ```sql {4-5}
 SELECT
@@ -46,7 +51,7 @@ SELECT
 
 ### New values
 
-Labels are also used for passing new values directly from your query. Need to add a custom string to outcome data extension? Or maybe synchonization timestamp for debugging purposes? You can leverage SQL for it.
+Use labels also for passing new values directly from your query. Need to add a custom string to outcome data extension? Or maybe synchronization timestamp for debugging purposes? You can leverage SQL for it.
 
 ```sql {6} title="Add custom column labaled 'ImportDate' with value equal to the UTC time of the script execution for each record"
 SELECT
@@ -54,12 +59,13 @@ SELECT
     EmailAddress,
     [External Contact Id] AS ExternalContactId,
     Gender__c AS Gender,
+    'Lead' AS RecordType,
     GETUTCDATE() AS ImportDate
 ```
 
 ### Conditions
 
-`CASE` statement evaluates a list of conditions and returns one of multiple possible result expressions. For Marketing Cloud purposes it is especially useful when you not only want to select a column, but also modify the values within it. Perfect for translating numeric codes to descriptive ones for personalization purposes. Awesome for standarizing data (change those `1`, `true` and `on` values of opt-in to a single format).
+`CASE` statement evaluates a list of conditions and returns one of the multiple possible result expressions. For Marketing Cloud purposes, it is especially useful when you not only want to select a column but also modify the values within it. Perfect for translating numeric codes to descriptive ones for personalization purposes. Excellent for standardizing data (change those `1`, `true` and `on` values of opt-in to a single format).
 
 ```sql {7-13}
 SELECT
@@ -67,6 +73,7 @@ SELECT
     EmailAddress,
     [External Contact Id] AS ExternalContactId,
     Gender__c AS Gender,
+    'Lead' AS RecordType,
     GETUTCDATE() AS ImportDate,
     CASE MemberType__c
         WHEN 1 THEN 'Bronze'
@@ -77,7 +84,7 @@ SELECT
     END
 ```
 
-You can also leverage [labels](#labels) to also manipulate the column name at the same time:
+You can also leverage [labels](#labels) to manipulate the column name at the same time:
 
 ```sql {13}
 SELECT
@@ -85,6 +92,7 @@ SELECT
     EmailAddress,
     [External Contact Id] AS ExternalContactId,
     Gender__c AS Gender,
+    'Lead' AS RecordType,
     GETUTCDATE() AS ImportDate,
     CASE MemberType__c
         WHEN 1 THEN 'Bronze'
@@ -97,7 +105,7 @@ SELECT
 
 Above examples are already useful in segmentation, but there is also one more way to write and use `CASE` statement that gives even more power. The search `CASE`.
 
-The difference is that you are not passign the column name on which you will be building conditions. Instead, you create boolean expression from scratch for each scenario.
+The difference is that you are not passing the column name on which you will be building conditions. Instead, you create a boolean expression from scratch for each scenario.
 
 ```sql {7-13} title="The same Query as the previous one, but written with Search Case"
 SELECT
@@ -105,6 +113,7 @@ SELECT
     EmailAddress,
     [External Contact Id] AS ExternalContactId,
     Gender__c AS Gender,
+    'Lead' AS RecordType,
     GETUTCDATE() AS ImportDate,
     CASE
         WHEN MemberType__c = 1 THEN 'Bronze'
@@ -115,7 +124,7 @@ SELECT
     END AS MemberType
 ```
 
-The example above doesn't show why it is worth to use the search `CASE`. It is actually a bit longer than the standard approach! But there is a reason to use this form of `CASE` statement that is visible once you want to create more elaborate conditions that are possible only with this version:
+The example above doesn't show why it is worth to use the search `CASE`. It is a bit longer than the standard approach! But there is a reason to use this form of `CASE` statement that is visible once you want to create more elaborate conditions that are possible only with this version:
 
 ```sql {3-7} title="Lets calculate what channel we should use in our campaign for a given user"
 SELECT
@@ -130,9 +139,9 @@ SELECT
 As you can see, thanks to search `CASE` statement we were able to check conditions on multiple different columns and connect them with `AND`/`OR` statements for better control. You can use this version of the `CASE` statement for all your needs (even those covered by the basic one) to worry not about two ways of formatting.
 
 :::note You Should Know
-You can use `CASE` statements inside a `CASE` statement to have even more dynamic query.
+You can use `CASE` statements inside a `CASE` statement to have an even more dynamic query.
 
-```sql {3-16} title="Lets add another dimension of membership level to differentiate available channels"
+```sql {3-16} title="Let's add another dimension of membership level to differentiate available channels"
 SELECT
     ContactKey,
     CASE
@@ -153,6 +162,18 @@ SELECT
 
 :::
 
+### Table Prefixes
+
+Additional elements that you will be using in many of your queries are table prefixes for selecting columns from multiple joined Data Extensions.
+
+```sql {2-3}
+SELECT
+    _Subscriber.SubscriberKey
+    _EnterpriseAttribute.LastName
+```
+
+I'm covering this topic in-depth in [`JOIN` statement documentation](sfmc-sql-join.mdx#table-name-prefix).
+
 ### Flow control
 
 Despite official [SFMC SQL documentation](https://help.salesforce.com/articleView?id=mc_as_sql_reference.htm&type=5) states that it supports the `IF` constructs, I was not able to make it work.
@@ -161,72 +182,4 @@ Despite official [SFMC SQL documentation](https://help.salesforce.com/articleVie
 
 Unfortunately, SFMC SQL does not support variables.
 
-Fortunately, it does support functions. Learn more about them in [SFMC SQL Functions documentation](sfmc-sql-functions.mdx).
-
-
-
-## Join on
-
-There will be some cases where all you need is to pull (and maybe transform) data from a single source Data Extension. But true magic of SQL is visible when you need to combine information from multiple data points. Here comes a `JOIN` statement.
-
-```sql {5} title="Create table with SubscriberKey and Email Name pair per sending Job"
-SELECT
-    _Sent.SubscriberKey,
-    _Job.EmailName
-FROM _Sent
-LEFT JOIN _Job ON _Sent.JobID = _Job.JobID
-```
-
-There is quite a lot to unpack.
-
-## Where
-
-### Conditions
-
-Also supports `CASE`
-
-## Group by
-
-## Order by
-
-## Union
-
-https://docs.microsoft.com/en-us/sql/t-sql/language-elements/set-operators-union-transact-sql?view=sql-server-ver15
-
-## Nested statements
-
-
-
-
-1. Avoid non-searchable operators for the WHERE clause (OR, NOT, <, >, NOT EXISTS, NOT IN, NOT LIKE, intrinsic functions). Those operators cannot take advantage of indexes and cause the query activity to run more slowly. More efficient operators (=, AND) improve queries.
-
-```sql
-SELECT emailaddress as ‘Email_Address’, [Favorite Colour] as ‘Favorite_Color’
-FROM [MasterData Extension] m
-INNER JOIN JuneMarketingSend j
-ON m.emailaddress = j.emailaddress
-WHERE m.emailaddress is not NULL
-```
-
-Running this query retrieves email and favorite color from the master data extension, and joins it with any matching email addresses from the June marketing send. Additionally, it only returns emails that are not missing. Also notice the m and the j. These are SQL aliases that are used to give a table, or a field in a table, a temporary name. This is especially helpful when you have a common field name between data extensions, like CustomerID or EmailAddress. You can also see it written like the following.
-
-SELECT o.OrderID, o.OrderDate, c.CustomerName
-FROM Customers AS c, Orders AS o
-WHERE c.CustomerID=o.CustomerID
-
-Example for exclusive offer to customers who have opened an email in the last 6 months and have made a purchase during that time.
-
-SELECT c.EmailAddress, c.CustomerID, c.First_Name
-FROM Customers c
-INNER JOIN Purchases p
-ON c.CustomerID = p.CustomerID
-WHERE [Purchase Date] > DateAdd(month, -6, GetDate()) AND [Open Date] > DateAdd(month, -6, GetDate())
-
-
-Common Queries
-Parent Accounts
-You can query data extensions in the Shared Data Extension folder from the parent account by adding the prefix ent. to the data extension name in the query. 
-SELECT EmailAddress
-FROM ent.MasterDataExtension
-
-
+Fortunately, it does support (selected) functions. Learn more about them in [SFMC SQL Functions documentation](sfmc-sql-functions.mdx).
