--- a/docs/sql/sfmc-sql-from.mdx
+++ b/docs/sql/sfmc-sql-from.mdx
@@ -1,17 +1,17 @@
 ---
 id: sfmc-sql-from
 title: SFMC SQL From
-sidebar_label: SQL From
-description: All you need to know about SQL to segment your contacts in SFMC
+sidebar_label: From
+description: Tell the SQL query FROM where you need the data
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='All you need to know about SQL to segment your contacts in SFMC.' />
+<LeadText content='Tell the SQL query FROM where you need the data' />
 
-The `SELECT` statement alone won't do anything. Once you have selected columns you want to work with, you need also to pick the table (Data Extension or System Data View) from which those columns should be taken. The code for this is simple:
+The [`SELECT`](sfmc-sql-select.mdx) statement alone won't do anything. Once you have selected columns you want to work with, you also need to pick the table (Data Extension or System Data View) `FROM` which the query will take the right columns. The code for this is simple:
 
-```sql {4}
+```sql {4} title="Get ContactKey and EmailAddress from Data Extension named MasterSubscriberDE"
 SELECT
     ContactKey,
     EmailAddress,
@@ -31,7 +31,7 @@ There are, however, two cases, specific to Salesforce Marketing Cloud, that adds
 
 ## System Data Views
 
-[System Data Views](sfmc-sql-system-data-views.mdx) are partially hidden Data Extensions used by the Salesforce Marketing Cloud to store data. Thing about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there also tracking data for SMS and Social channels. Also more technical data points, like Jobs and Enterprise Attributes, are using System Data Views. The difference related to those tables is in naming convention. When querying them you must leverage `_` prefix:
+Salesforce Marketing Cloud is partially hiding the [System Data Views](sfmc-sql-system-data-views.mdx) Data Extensions that store tracking data. Think about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there also tracking data for SMS and Social channels. Also, more technical data points, like Jobs and Enterprise Attributes, are using System Data Views. The difference related to those tables is in naming convention. When querying them, you must leverage `_` prefix:
 
 ```sql {8}
 SELECT
@@ -46,7 +46,7 @@ FROM _Job
 
 ## Enterprise Data Extension
 
-If you want to query Shared Data Extensions or Synchronized Data Extensions you must use different special prefix, `ENT.`:
+If you want to query Shared Data Extensions or Synchronized Data Extensions, you must use different unique prefix, `ENT.`:
 
 ```sql {4}
 SELECT
@@ -55,11 +55,11 @@ SELECT
 FROM ENT.SharedSegment
 ```
 
-Remember that account permissons restrictions may apply.
+Remember that account permissions restrictions may apply.
 
 :::note You Should Know
 
-In some scenarios you might want to use both above options in the same time. For example, if you query System Data View _Subscribers on child Business Unit, you will receive data only for the subscribers stored in this child. In case you want to query all your subscribers, you should point to Enterprise level System Data View:
+In some scenarios, you might want to use both the above options at the same time. For example, if you query System Data View _Subscribers on child Business Unit, you will receive data only for the subscribers stored in this child. In case you want to query all your subscribers, you should point to Enterprise level System Data View:
 
 ```sql {6}
 SELECT
@@ -72,4 +72,4 @@ FROM ENT._Subscribers
 
 :::
 
-When selecting Data Extensions to pull data from, remember about a best practice to avoid ones spanning a cumulative field width greater than 4000 characters. They will badly impact performance of your query. If needed, consider splitting your query into multiple consecutive queries.
+When selecting Data Extensions to pull data from, remember about the best practice to avoid ones spanning a cumulative field width greater than 4000 characters. They will badly impact the performance of your query. If needed, consider splitting your query into multiple consecutive queries.
